Fix to solve nrepl MaxPermSpace issue.